Fixed a CSS layout problem that only occurs on Chrome for Android, using Grunt for build

--- a/bootstrap-social.scss
+++ b/bootstrap-social.scss
@@ -19,7 +19,7 @@ $bs-height-xs:   (floor($font-size-small * 1.2) + $padding-small-vertical + 1);
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
-  :first-child {
+  i {
     position: absolute;
     left: 0;
     top: 0;
@@ -32,7 +32,7 @@ $bs-height-xs:   (floor($font-size-small * 1.2) + $padding-small-vertical + 1);
   }
   &.btn-lg {
     padding-left: ($bs-height-lg + $padding-large-horizontal);
-    :first-child {
+    i {
       line-height: $bs-height-lg;
       width: $bs-height-lg;
       font-size: 1.8em;
@@ -40,7 +40,7 @@ $bs-height-xs:   (floor($font-size-small * 1.2) + $padding-small-vertical + 1);
   }
   &.btn-sm {
     padding-left: ($bs-height-sm + $padding-small-horizontal);
-    :first-child {
+    i {
       line-height: $bs-height-sm;
       width: $bs-height-sm;
       font-size: 1.4em;
@@ -48,7 +48,7 @@ $bs-height-xs:   (floor($font-size-small * 1.2) + $padding-small-vertical + 1);
   }
   &.btn-xs {
     padding-left: ($bs-height-xs + $padding-small-horizontal);
-    :first-child {
+    i {
       line-height: $bs-height-xs;
       width: $bs-height-xs;
       font-size: 1.2em;
@@ -61,7 +61,7 @@ $bs-height-xs:   (floor($font-size-small * 1.2) + $padding-small-vertical + 1);
   height: ($bs-height-base + 2);
   width: ($bs-height-base + 2);
   padding: 0;
-  :first-child {
+  i {
     border: none;
     text-align: center;
     width: 100%!important;
